--- a/css/style.css
+++ b/css/style.css
@@ -4,32 +4,38 @@
     box-sizing: border-box;
 }
 
+header{
+    height: 10%;
+}
+
 .tab{
     overflow: hidden;
-    background-color: rgb(27, 26, 63);
+    background-color: rgb(103, 0, 98);
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 60px;
+    height: 100%;
     gap: 10px;
 }
 
 body{
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(rgb(17, 0, 170), rgb(78, 96, 255), rgb(150, 197, 255));
+    background: rgb(30, 29, 29);
 }
 
 .tab button{
     padding: 10px;
     width: 100px;
-    background-color: rgb(142, 199, 255);
+    background-color: rgb(212, 142, 255);
     transition: all ease-in-out .5s;
     cursor: pointer;
+    border: none;
+    border-radius: 10px;
 }
 
 .tab button:hover{
-    background-color: rgba(49, 49, 188, 0.679);
+    background-color: rgba(146, 3, 124, 0.679);
     color: white;
 }
 
@@ -95,13 +101,15 @@ h2{
 .main button{
     width: 120px;
     padding: 20px;
-    background-color: rgba(0, 123, 123, 0.766);
+    background-color: rgb(166, 7, 174);
     color: white;
     transition: all ease-in-out .5s;
+    border: none;
+    border-radius: 10px;
 }
 
 .main button:hover{
-    background-color: rgb(127, 200, 255);
+    background-color: rgb(222, 123, 239);
     cursor: pointer;
 }
 
